INCLUDES = -I../src
AM_LDFLAGS  = ../src/.libs/libfoa.a

noinst_PROGRAMS = init_libfoa decode_simple_array decode_hashed_array \
	       decode_simple_object decode_hashed_object decode_hashed_object_array \
	       decode_unordered_object encode_buffer encode_stream \
	       encode_object decode_error decode_large_object decode_stream \
	       decode_large_stream decode_callback write_array_buffer \
	       write_array_stream escape_buffer set_mode encode_named_object \
	       decode_named_object

init_libfoa_SOURCES = init_libfoa.c
decode_simple_array_SOURCES = decode_simple_array.c
decode_hashed_array_SOURCES = decode_hashed_array.c
decode_simple_object_SOURCES = decode_simple_object.c
decode_hashed_object_SOURCES = decode_hashed_object.c
decode_hashed_object_array_SOURCES = decode_hashed_object_array.c
decode_unordered_object_SOURCES = decode_unordered_object.c
encode_buffer_SOURCES = encode_buffer.c
encode_stream_SOURCES = encode_stream.c
encode_object_SOURCES = encode_object.c
decode_error_SOURCES = decode_error.c
decode_large_object_SOURCES = decode_large_object.c
decode_stream_SOURCES = decode_stream.c
decode_large_stream_SOURCES = decode_large_stream.c
decode_callback_SOURCES = decode_callback.c
write_array_buffer_SOURCES = write_array_buffer.c
write_array_stream_SOURCES = write_array_stream.c
escape_buffer_SOURCES = escape_buffer.c
set_mode_SOURCES = set_mode.c
encode_named_object_SOURCES = encode_named_object.c
decode_named_object_SOURCES = decode_named_object.c
